<resources>
    <string name="app_name">Gödel</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="text_sizeBig">30sp</string>

    <string name="label_string">String:</string>
    <string name="label_bigG">Γ Function:</string>
    <string name="label_littleG">γ Function:</string>
    <string name="label_out">Output:</string>

    <string name="button_prc">Process</string>
    <string name="button_clr">Clear</string>


    <string name="t2label_1">\'0\'</string>
    <string name="t2label_2">\'S\'</string>
    <string name="t2label_3">\'+\'</string>
    <string name="t2label_4">\'*\'</string>
    <string name="t2label_5">\'=\'</string>

    <string name="t2label_6">\'~\'</string>
    <string name="t2label_7">\'⊃\'</string>
    <string name="t2label_8">\'∀\'</string>
    <string name="t2label_9">\'(\'</string>
    <string name="t2label_10">\')\'</string>

    <string name="t2label_17">\'x\'</string>
    <string name="t2label_19">\'y\'</string>
    <string name="t2label_21">\'z\'</string>

</resources>
