<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:theme="@style/AppTheme">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:theme="@style/AppTheme">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme">
            </TabWidget>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView"
                android:layout_gravity="center_vertical">

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme"
                    style="@style/AppTheme">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical"
                        android:theme="@style/AppTheme"
                        android:baselineAligned="false">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView"
                            android:layout_marginTop="24dp"
                            android:text="@string/label_string"
                            android:layout_gravity="center_horizontal"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editString"
                            android:inputType="text|textMultiLine" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_bigG"
                            android:id="@+id/textView2"
                            android:layout_gravity="center_horizontal"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editBigG"
                            android:inputType="none|textMultiLine"
                            android:focusableInTouchMode="false"
                            android:focusable="false"
                            android:textIsSelectable="true"
                            android:editable="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_littleG"
                            android:id="@+id/textView3"
                            android:layout_gravity="center_horizontal"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editLittleG"
                            android:inputType="none|textMultiLine"
                            android:focusableInTouchMode="false"
                            android:focusable="false"
                            android:textIsSelectable="true"
                            android:editable="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_out"
                            android:id="@+id/textView4"
                            android:layout_gravity="center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editOut"
                            android:inputType="none|textMultiLine"
                            android:focusableInTouchMode="false"
                            android:focusable="false"
                            android:textIsSelectable="true"
                            android:editable="false" />

                        <LinearLayout
                            android:id="@+id/LinearLayout02"
                            android:layout_height="fill_parent"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="66dp">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/button_prc"
                                android:id="@+id/btnPrc"
                                android:theme="@style/AppTheme"
                                android:layout_gravity="bottom"
                                android:enabled="false" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/button_clr"
                                android:id="@+id/btnClr"
                                android:theme="@style/AppTheme"
                                android:layout_gravity="bottom" />

                        </LinearLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/tab2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginTop="20dp">

                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_1"
                            android:id="@+id/textGD1" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_2"
                            android:id="@+id/textGD2"
                            android:layout_toRightOf="@+id/textGD1" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_3"
                            android:id="@+id/textGD3"
                            android:layout_toRightOf="@+id/textGD2" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_4"
                            android:id="@+id/textGD4"
                            android:layout_toRightOf="@+id/textGD3" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_5"
                            android:id="@+id/textGD5"
                            android:layout_toRightOf="@+id/textGD4" />

                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_6"
                            android:id="@+id/textGD6"
                            android:layout_below="@+id/textGD1" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_7"
                            android:id="@+id/textGD7"
                            android:layout_below="@+id/textGD1"
                            android:layout_toRightOf="@+id/textGD6" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_8"
                            android:id="@+id/textGD8"
                            android:layout_below="@+id/textGD1"
                            android:layout_toRightOf="@+id/textGD7" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_9"
                            android:id="@+id/textGD9"
                            android:layout_below="@+id/textGD1"
                            android:layout_toRightOf="@+id/textGD8" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_10"
                            android:id="@+id/textGD10"
                            android:layout_below="@+id/textGD1"
                            android:layout_toRightOf="@+id/textGD9" />

                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_17"
                            android:id="@+id/textGD17"
                            android:layout_below="@+id/textGD7"
                            android:layout_toRightOf="@+id/textGD6" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_19"
                            android:id="@+id/textGD19"
                            android:layout_below="@+id/textGD7"
                            android:layout_toRightOf="@+id/textGD17" />
                        <TextView style="@style/SignLabel"
                            android:text="@string/t2label_21"
                            android:id="@+id/textGD21"
                            android:layout_below="@+id/textGD7"
                            android:layout_toRightOf="@+id/textGD19" />

                    </RelativeLayout>

                </FrameLayout>
            </ScrollView>
        </LinearLayout>
    </TabHost>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_test">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
